texi2html/test/invalid/res/texi_direntry_dircategory_after_first_node/direntry_dircategory_after_first_node.texi
\input texinfo @c -*-texinfo-*-

@setfilename direntry_dircategory_after_first_node.info

@node Top
@top direntry direcategory after first node

@dircategory Cat
@direntry
* in text: (in_text). in text
@end direntry

@bye
